Align with 8,5,x - Spacing, Javadoc, use JmxEnabled